third-party/vendor/concat-arrays-0.1.2/tests/compile-fail/invalid-length-zst.rs
use concat_arrays::concat_arrays;

fn main() {
    let x = [()];
    let y = [()];
    let _: [(); 3] = concat_arrays!(x, y);
}
